--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -28,7 +28,7 @@ El objetivo del TP es comprender el modelo cinemático y la estimación de pose 
 
 \section{Entrega}
 \begin{itemize}
-    \item Se debe proveer un repositorio git que contenga el código desarrollado, una imagen docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
+    \item Se debe proveer un repositorio git que contenga el código desarrollado y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución. Se recomienda hacer una imagen Docker para facilitar la reproducción de los resuldatos.
 
     \item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
     
