Add more material

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -20,6 +20,20 @@
 \end{frame}
 
 \begin{frame}
+	\frametitle{Más material}
+	
+	Material para armar estas slides:
+	\begin{itemize}
+		\item Joan Solá - Lie theory for the roboticist \url{https://youtu.be/gy8U7S4LWzs}
+		\item Michael Kaess - Factor Graphs for Robot Perception \url{https://youtu.be/Q313pTMAdcM}
+		\item Philipp Hennig - Probabilistic Machine Learning - Lecture 17 - Factor Graphs \url{https://youtu.be/fXD6KJB1U20}
+		\item Lennart Svensson - Machile Learning Tutorial: Factor Graphs, Belief Propagation and Variational Techniques \url{https://youtu.be/yQg34-2QhvE}
+	\end{itemize}
+	
+\end{frame}
+
+
+\begin{frame}
 	\frametitle{Temario para estas slides}
 	
 	\begin{itemize}
