--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -1060,15 +1060,27 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Graph-Based SLAM con landmarks}
+    \frametitle{Sistema indeterminado}
     \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
-    
+    \begin{itemize}
+		\item No hay garantía que que un sistema tenga rango completo
+		\begin{itemize}
+			\item Los landmarks puede ser observados una sola vez
+			\item El robot puede que no tenga información de odometría
+		\end{itemize}
+		\item Podemos lidiar con estos problemas utilizando un \emph{damping factor} para $\linearSystemH$
+		\item En vez de resolver $\linearSystemH \vec{\Delta} \stateBold = - \linearSystemb$, resolvemos
+		$(\linearSystemH + \lambda \vec{I}) \vec{\Delta} \stateBold = - \linearSystemb$
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
-    \frametitle{Graph-Based SLAM con landmarks}
+    \frametitle{Levenberg-Marquart}
     \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
-    
+    \begin{itemize}
+		\item El damping factor $\lambda \vec{I}$ hace que el sistema sea definido positivo
+		\item Es una suma ponderada del método de Gauss-Newton y el método de descenso por el gradiente
+    \end{itemize}
 \end{frame}
 
 
