Add pose-graph 2d video

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -310,6 +310,17 @@
     
 \end{frame}
 
+\begin{frame}[fragile]
+    \frametitle{2D Pose-Graph con LiDAR}
+    \note{Víðeo extraído de https://youtu.be/E6IvbjZA7Ao}
+        
+	\begin{center}
+    \movie[loop]{\includegraphics[width=0.5\columnwidth]{./images/pose_graph_2d_video.jpg}}{./videos/pose_graph_2d.mp4}
+    \end{center}
+    
+\end{frame}
+
+
 \begin{frame}
     \frametitle{Graph-based SLAM usando Pose-Graph}
     \note{Información extraída de https://youtu.be/uHbRKvD8TWg}
@@ -1075,7 +1086,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Levenberg-Marquart}
+    \frametitle{Levenberg–Marquardt}
     \note{Información extraída de https://youtu.be/mZBdPgBtrCM}
     \begin{itemize}
 		\item El damping factor $\lambda \vec{I}$ hace que el sistema sea definido positivo
