Add path-planing content

--- a/teoricas/teorica_09/slides.tex
+++ b/teoricas/teorica_09/slides.tex
@@ -19,7 +19,7 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{../../common/bibliography.bib}
 
-\title{Localización}
+\title{Planeamiento de Caminos}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
@@ -30,8 +30,8 @@
 	% add title page
 	\frame{\titlepage}
 	
-	\section{Lopcalización}
-	\input{src/localization.tex}
+	\section{Path Planning}
+	\input{src/path_planning.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
