--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -19,7 +19,7 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{../../common/bibliography.bib}
 
-\title{SLAM}
+\title{SLAM: Simultaneous Localization and Mapping}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
