--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -1111,4 +1111,35 @@
     
 \end{frame}
 
+\begin{frame}
+	\frametitle{Bundle Adjustment}
+	
+	\begin{figure}
+		\includegraphics[width=\textwidth]{./images/ba_reprojection_error_before.pdf}
+	\end{figure}
+	
+	\note{Ejemplo de ajuste de 3 keyframes que ven 2 puntos del mapa.\\
+		k1 - x1 medición estéreo\\
+		k1 - x2 medición derecha\\
+		k2 - x1 medición estéreo\\
+		k2 - x2 medición estéreo\\
+		k3 - x1 medición izquierda\\
+		k3 - x2 medición estéreo}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Bundle Adjustment}
+	
+	\begin{figure}
+		\includegraphics[width=\textwidth]{./images/ba_reprojection_error_after.pdf}
+	\end{figure}
+	
+	\note{Ajustamos los keyframes y los puntos!!!\\
+		Una ecuación de error por cada medición (6 en total).\\
+		Nuevamente tenemos en cuenta la transformación rígida entre la cámara izquierda y la cámara derecha para las mediciones derechas.}
+	
+\end{frame}
+
+
 
