Path planning slides

--- a/teoricas/teorica_09/src/path_planning.tex
+++ b/teoricas/teorica_09/src/path_planning.tex
@@ -4,9 +4,52 @@
 	Material para armar estas slides:
 	\begin{itemize}
 		\item Cyrill Stachniss - Robot Motion Planning using A*: \url{https://youtu.be/HR1TNa8Lp7w}
+		\item Wolfram Burgard - Path and Motion Planning \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+		\url{http://ais.informatik.uni-freiburg.de/teaching/ss16/robotics/recordings/19-path-and-motion-planning-part1.mp4}
+		\url{http://ais.informatik.uni-freiburg.de/teaching/ss16/robotics/recordings/19-path-and-motion-planning-part2.mp4}
+		\url{http://ais.informatik.uni-freiburg.de/teaching/ss16/robotics/recordings/19-path-and-motion-planning-part3.mp4}
 	\end{itemize}
 	
 \end{frame}
+
+\begin{frame}
+	\frametitle{Motion Planning}
+	\note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+	
+	Latombe (1991): ``... eminently necessary since, by definition, a robot accomplishes tasks by moving in the real world.''
+	
+	Objetivos:
+	\begin{itemize}
+		\item Trayectorias sin colisiones.
+		\item El robot debe llegar a la ubicación de destino lo más rápido posible.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Desafíos}
+	\note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+	
+	\begin{itemize}
+		\item Calcular el camino optimo considerando potenciales incertidumbres en las acciones
+		\item Generar rápidamente acciones en el caso de objetos imprevistos
+	\end{itemize}
+	
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Arquitectura clásica}
+	\note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+	
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Motion Planning Formulation}
+	\note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+	
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Espacio de configuraciones}
@@ -15,6 +58,12 @@
 	Espacio de configuraciones es el estado total del robot y el entorno, incluidas las articulaciones y/o movimiento de ruedas)
 	
 \end{frame}
+
+\begin{frame}
+	\frametitle{Motion Planning Formulation}
+	
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Planeamiento de movimiento}
@@ -31,3 +80,61 @@
 	Un camino NO es igual a una trayectoria. Una trayectoria es un camino con información adicional de cómo se atravesar dicho camino con respecto al tiempo, es decir tiene información de velocidad.
 	\end{block}
 \end{frame}
+
+
+\begin{frame}
+	\frametitle{Rapidly Exploring Random Trees (RTTs)}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Road Map Planning}
+	
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Generalized Voronoi Diagram}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Voronoi Diagram}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Randomized Road Maps}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{From Road Maps to Paths}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Randomized Road Maps}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Randomized Road Maps}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Randomized Road Maps}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Randomized Road Maps}
+	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Markov Decision Process}
+	
+\end{frame}
+
