Add path_planning architecture image

--- a/teoricas/teorica_09/src/path_planning.tex
+++ b/teoricas/teorica_09/src/path_planning.tex
@@ -41,6 +41,10 @@
 	\frametitle{Arquitectura clásica}
 	\note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
 	
+	\begin{figure}[!h]
+		\includegraphics[width=0.3\textwidth]{images/path_planning_architecture.pdf}
+	\end{figure}
+	
 \end{frame}
 
 
