--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -774,10 +774,13 @@
         \observationBold_{12} &= 1\\
         \informationMatrix &= 2\\
         \error_{12} &= \observationBold_{12} - (\stateBold_{2} - \stateBold_{1}) = 1 - (0 - 0) = 1\\
-        \jacobian_{12} &= (1 - 1)\\
+	    \jacobian_{12} &=
+	    \begin{bmatrix}
+        	1 & -1
+        \end{bmatrix}\\
         \linearSystemb_{12}^{\top} &= \error_{12}^{\top} \informationMatrix_{12} \jacobian_{12} =
         \begin{bmatrix}
-            1 & -2
+            2 & -2
         \end{bmatrix}\\
         \linearSystemH_{12} &= \jacobian_{12}^{\top} \informationMatrix_{12} \jacobian_{12} = 
         \begin{bmatrix}
@@ -788,7 +791,7 @@
     \end{align*}
 
     \begin{center}
-    \alert{Problema:} $\det(\linearSystemH) = 0$ no podemos invertir $\linearSystemH$
+    \alert{Problema:} $\det(\linearSystemH) = 0$, por lo tanto no podemos invertir $\linearSystemH$
     \end{center}
 \end{frame}
 
@@ -847,7 +850,7 @@
     \begin{itemize}
         \item Asumimos que el valor de ciertas variables durante la optimización es conocido a priori
         \item Queremos optimizar todos las demás variables pero manteniendo estas como fijas
-        \item Podemos hacer como hicimos con el prior anterior, pero el problema es que es solo una \emph{soft constraint} y no es realmente un fix. Ya que puede suceder que otra constraint mueva a este nodo, y por tanto no podemos asegurar que tenga un valor fijo.
+        \item Podemos hacer como hicimos con el prior anterior, pero el problema es que es solo una {\bf soft constraint} y no es realmente un fix. Ya que puede suceder que otra constraint mueva a este nodo, y por tanto no podemos asegurar que tenga un valor fijo.
         \item Para efectivamente hacer que una variable quede fija, tenemos que hacer que no sea optimizada y por tanto debemos removerla del sistema lineal. Removerla del sistema lineal hace que no sea actualizada y que todas las demás variables esten restringidas por esta. Esto se hace construyendo todo el sistema lineal y luego sencillamente suprimiendo la fila y columna correspondiente a la variable. Finalmente se resuelve el sistema lineal.
         \item La supresión de la columna y fila funciona como una {\bf condicionamiento}, es decir, es una condición que dice ``Dado que un nodo toma un valor, las demás se ven afectadas de esta manera''
         
@@ -897,7 +900,7 @@
     \end{itemize}
 
  	\begin{figure}[!h]
-    \includegraphics[width=0.25\textwidth]{pose_graph_relative_uncertainty.pdf}
+    \includegraphics[width=0.2\textwidth]{pose_graph_relative_uncertainty.pdf}
     \end{figure}
     
 \end{frame}
