--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -971,7 +971,7 @@
     \begin{itemize}
 		\item ¿Cuál es el rango de la matriz $\linearSystemH_{ij}$ para restricción pose-landmark 2D?
 		\begin{itemize}
-			\item El rango de $\linearSystemH_{ij}$ está determinado por el rando del Jacobiano $\jacobian_{ij}$ que a lo sumo es una matriz de $2 \times 5$. 2 porque la medición da información 2D y 5 por $\begin{bmatrix}	x & y & theta & l_{x} & l_{y} \end{bmatrix}$
+			\item El rango de $\linearSystemH_{ij}$ está determinado por el rando del Jacobiano $\jacobian_{ij}$ que a lo sumo es una matriz de $2 \times 5$ (2 porque la medición da información 2D y 5 por $\begin{bmatrix}	x & y & theta & l_{x} & l_{y} \end{bmatrix}$)
 			\item $\linearSystemH_{ij}$ no puede tener más que rango 2
 			
 				$rank(A^{\top} A) = rank(A^{\top}) = rank(A)$
